- Fixed file name/imports for consistency - Replaced pointer event style on individual icons for global reset - Got rid of horizontal scroll bar on edit theme page - Added missing tite tag on SVG icon - cleanup

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -12665,4 +12665,8 @@ body.isMobile .Popup.hasRichEditor .Border {
   margin: 5px 0;
 }
 
+svg {
+  pointer-events: none !important;
+}
+
 /*# sourceMappingURL=admin.css.map */
